[gd_scene load_steps=101 format=2]

[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00020.png" type="Texture" id=1]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00022.png" type="Texture" id=2]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00017.png" type="Texture" id=3]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00034.png" type="Texture" id=4]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00026.png" type="Texture" id=5]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00025.png" type="Texture" id=6]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00008.png" type="Texture" id=7]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00010.png" type="Texture" id=8]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00018.png" type="Texture" id=9]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00025.png" type="Texture" id=10]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00009.png" type="Texture" id=11]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00023.png" type="Texture" id=12]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00023.png" type="Texture" id=13]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00010.png" type="Texture" id=14]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00009.png" type="Texture" id=15]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00030.png" type="Texture" id=16]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00030.png" type="Texture" id=17]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00031.png" type="Texture" id=18]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00032.png" type="Texture" id=19]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00016.png" type="Texture" id=20]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00029.png" type="Texture" id=21]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00036.png" type="Texture" id=22]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00035.png" type="Texture" id=23]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00032.png" type="Texture" id=24]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00016.png" type="Texture" id=25]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00027.png" type="Texture" id=26]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00011.png" type="Texture" id=27]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00012.png" type="Texture" id=28]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00033.png" type="Texture" id=29]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00013.png" type="Texture" id=30]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00014.png" type="Texture" id=31]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00028.png" type="Texture" id=32]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00024.png" type="Texture" id=33]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00033.png" type="Texture" id=34]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00034.png" type="Texture" id=35]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00035.png" type="Texture" id=36]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00027.png" type="Texture" id=37]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00037.png" type="Texture" id=38]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00036.png" type="Texture" id=39]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00012.png" type="Texture" id=40]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00014.png" type="Texture" id=41]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00013.png" type="Texture" id=42]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00015.png" type="Texture" id=43]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00018.png" type="Texture" id=44]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00038.png" type="Texture" id=45]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00039.png" type="Texture" id=46]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00026.png" type="Texture" id=47]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00017.png" type="Texture" id=48]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00008.png" type="Texture" id=49]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00024.png" type="Texture" id=50]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00021.png" type="Texture" id=51]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00029.png" type="Texture" id=52]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00020.png" type="Texture" id=53]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00021.png" type="Texture" id=54]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00028.png" type="Texture" id=55]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00019.png" type="Texture" id=56]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00015.png" type="Texture" id=57]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00019.png" type="Texture" id=58]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00022.png" type="Texture" id=59]
[ext_resource path="res://Components/Mom/walk_up/Mom-Walk-Up_00031.png" type="Texture" id=60]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00011.png" type="Texture" id=61]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00010.png" type="Texture" id=62]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00039.png" type="Texture" id=63]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00038.png" type="Texture" id=64]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00008.png" type="Texture" id=65]
[ext_resource path="res://Components/Mom/walk_side/Mom-Walk-Side_00037.png" type="Texture" id=66]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00009.png" type="Texture" id=67]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00035.png" type="Texture" id=68]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00031.png" type="Texture" id=69]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00033.png" type="Texture" id=70]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00017.png" type="Texture" id=71]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00024.png" type="Texture" id=72]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00013.png" type="Texture" id=73]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00029.png" type="Texture" id=74]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00016.png" type="Texture" id=75]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00030.png" type="Texture" id=76]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00019.png" type="Texture" id=77]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00012.png" type="Texture" id=78]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00039.png" type="Texture" id=79]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00022.png" type="Texture" id=80]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00014.png" type="Texture" id=81]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00011.png" type="Texture" id=82]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00023.png" type="Texture" id=83]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00025.png" type="Texture" id=84]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00015.png" type="Texture" id=85]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00026.png" type="Texture" id=86]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00020.png" type="Texture" id=87]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00018.png" type="Texture" id=88]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00028.png" type="Texture" id=89]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00038.png" type="Texture" id=90]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00034.png" type="Texture" id=91]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00037.png" type="Texture" id=92]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00027.png" type="Texture" id=93]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00032.png" type="Texture" id=94]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00036.png" type="Texture" id=95]
[ext_resource path="res://Components/Mom/walk_down/Mom-Walk-Down_00021.png" type="Texture" id=96]
[ext_resource path="res://Components/Mom/Mom.gd" type="Script" id=97]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 65 ), ExtResource( 67 ), ExtResource( 62 ), ExtResource( 82 ), ExtResource( 78 ), ExtResource( 73 ), ExtResource( 81 ), ExtResource( 85 ), ExtResource( 75 ), ExtResource( 71 ), ExtResource( 88 ), ExtResource( 77 ), ExtResource( 87 ), ExtResource( 96 ), ExtResource( 80 ), ExtResource( 83 ), ExtResource( 72 ), ExtResource( 84 ), ExtResource( 86 ), ExtResource( 93 ), ExtResource( 89 ), ExtResource( 74 ), ExtResource( 76 ), ExtResource( 69 ), ExtResource( 94 ), ExtResource( 70 ), ExtResource( 91 ), ExtResource( 68 ), ExtResource( 95 ), ExtResource( 92 ), ExtResource( 90 ), ExtResource( 79 ) ],
"loop": true,
"name": "walk_down",
"speed": 25.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 61 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 57 ), ExtResource( 25 ), ExtResource( 48 ), ExtResource( 9 ), ExtResource( 58 ), ExtResource( 1 ), ExtResource( 51 ), ExtResource( 2 ), ExtResource( 13 ), ExtResource( 50 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 26 ), ExtResource( 32 ), ExtResource( 52 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 29 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 66 ), ExtResource( 64 ), ExtResource( 63 ) ],
"loop": true,
"name": "walk_side",
"speed": 25.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 27 ), ExtResource( 40 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 43 ), ExtResource( 20 ), ExtResource( 3 ), ExtResource( 44 ), ExtResource( 56 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 59 ), ExtResource( 12 ), ExtResource( 33 ), ExtResource( 6 ), ExtResource( 47 ), ExtResource( 37 ), ExtResource( 55 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 60 ), ExtResource( 24 ), ExtResource( 34 ), ExtResource( 4 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 38 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "walk_up",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="Mom" type="Area2D" groups=["mom"]]
script = ExtResource( 97 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 0.267045, 0.267045 )
frames = SubResource( 2 )
animation = "walk_down"
frame = 10
playing = true

[node name="MoveTween" type="Tween" parent="."]

[node name="FrontArea" type="Area2D" parent="."]
position = Vector2( 0, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontArea"]
shape = SubResource( 3 )

[node name="DelayTween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="MoveTween" to="." method="_on_MoveTween_tween_all_completed"]
